--- a/findwater/src/main/webapp/css/home.css
+++ b/findwater/src/main/webapp/css/home.css
@@ -3,6 +3,10 @@ body {
 	font-family: tahoma,arial,simsun,"ËÎÌו";
 }
 
+a:hover {
+	color:#FFF;
+}
+
 .home_header {
 	height:80px;
 	width: 100%;
@@ -10,6 +14,34 @@ body {
 	margin-top: 0px;
 	margin-bottom:10px;
 }
+.home_foot {
+	height: 30px;
+	width: 100%;
+	background:#444;
+	clear: both;
+	position: absolute;
+	bottom: 0px;
+}
+
+.home_foot .foot_info {
+	color: #999;
+	font-size: 12px;
+	text-align: center;
+	line-height: 30px;
+}
+
+.home_foot .foot_info a {
+	text-decoration: none;
+}
+
+.home_foot .foot_info a:link,a:visited {
+	color: #999;
+}
+
+.home_foot .foot_info a:hover {
+	color: #fff;
+}
+
 
 .home_logo {
 	float: left;
