--- a/findwater/src/main/webapp/css/login.css
+++ b/findwater/src/main/webapp/css/login.css
@@ -71,3 +71,17 @@
 	cursor: pointer;
  }
  
+.warning {
+    background: #80a4e5 none repeat scroll 0 0;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 12px;
+    font-weight: 400;
+    height: 24px;
+    line-height: 25px;
+    margin: -35px 320px 0;
+    padding: 0 5px;
+	position: absolute;
+}
+ 
+ 
